feat(android): Implement app usage monitoring and blocking functionality
- Added AppBlockOverlayService to display an overlay when app usage limits are exceeded.
- Introduced AppLimitMonitorService to monitor app usage and enforce time limits.
- Updated Dashboard to check for necessary permissions and guide users to grant them.
- Enhanced ScreenTimeLimit screen to display active limits and allow setting limits for apps.
- Created UI components for permission requests and app limit management.
- Added drawable resources for overlay and icons, along with necessary string resources.

Signed-off-by: Chris1320 <me@chrisfromnowhere.me>

--- a/ReconnectED-Android/app/src/main/res/values/strings.xml
+++ b/ReconnectED-Android/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+
+    <!-- App Blocking Strings -->
+    <string name="lock_icon">Lock Icon</string>
+    <string name="times_up">Time\'s Up!</string>
+    <string name="go_to_home_screen">Go to Home Screen</string>
 </resources>
